fix dual compile JDK8 vs JDK9+